Fixed alignment of site navigation links.

--- a/styles/sass/layout.scss
+++ b/styles/sass/layout.scss
@@ -31,6 +31,10 @@ header#site-header {
 }
 
 nav#site-navigation {
+  ul {
+    padding: 0;
+  }
+  
   li {
     list-style: none;
     display: inline-block;
